2007-06-07  Inge Wallin  <ingwa@shihonage.lkpg.cendio.se>

	Introduce d-pointer in MarbleWidget
	* src/lib/MarbleWidget.cpp (d): new member
	* src/lib/MarbleWidget.cpp (MarbleWidgetPrivate): new class
	(rest of MarbleWidget.cpp): use d-> everywhere
	
	Krazy 4: Check for an acceptable copyright
	* src/lib/kml/KMLDocument.cpp: Add header with copyright.

2007-06-06  Murad Tagirov  <tmurad@gmail.com>
    Added KMLDocument

2007-06-06  Inge Wallin  <inge@lysator.liu.se>

	Fix copyright statements
	* src/lib/kml/*.{h,cpp}: Set the correct email for Murad Tagirov

	Krazy 13: Check for inlince methods in public classes
	* src/MarbleControlBox.cpp (setLocations): Make non-inline
	(minimumZoom): Make non-inline

	Krazy 13: Check for inlince methods in public classes
	* src/lib/MarbleWidget.{h,cpp}: make all functions non-inline

	Krazy 13: Check for inlince methods in public classes
	* src/lib/searchlistview.cpp (activate): Make non-inline.

	Krazy 12: Check for proper include directives
	* src/lib/marble_export.h: Use <QtCore/QtGlobal> instead of "..."

	Introduce d-pointer in MarbleModel
	* src/lib/MarbleModel.cpp (d): new member
	* src/lib/MarbleModel.cpp (MarbleModelPrivate): new class
	(rest of MarbleModel.cpp): use d-> everywhere
	This also fixes a lot of Krazy 13.issues:
	  inline functions in public classes.

2007-06-05  Torsten Rahn  <rahn@kde.org>

    * src/lib/LegendBrowser.{h,cpp}: More changes in the
    LegendBrowser to avoid flicker and several
    additional attributes which are now supported.

    small TODOs: Make LegendBrowser a Designer Plugin
    and further improve its HTML ...

    * src/lib/placemarkpainter.{h,cpp}: made cities and
    terrain accessible from MarbleWidget.

2007-06-05  Inge Wallin  <inge@lysator.liu.se>

	Krazy 21: Check for signals: and slots:
	* src/lib/*.h: switch Q_SIGNALS: for signals: and Q_SLOTS: for slots:
	(This fixes 31 issues in one swoop!)

	Make it build again